chore: clean gitignore for deployment

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,41 @@
+# ================================
 # 仮想環境
+# ================================
 venv/
+.env
 
-# 提出物
+# ================================
+# 提出物（学校提出用）
+# ================================
 提出物/
 
-# Pythonキャッシュ
+# ================================
+# Python キャッシュ
+# ================================
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
 *.swp
 
-# 実行時に生成されるものだけ除外
+# ================================
+# Streamlit / 実行生成物
+# ================================
+.streamlit/
+*.db
+
+# ================================
+# RAG / Vector DB（実行時生成）
+# ================================
 src/vector_db/
+
+# ================================
+# 一時ビルド・リリース物
+# ================================
 src/Release-25.11.0-0/
+
+# ================================
+# OS依存
+# ================================
+.DS_Store
+Thumbs.db
