Update requirements, remove unused files, add assets/core

--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,15 @@ __pycache__/
 *.swp
 
 # ================================
-# Streamlit / 実行生成物
+# Streamlit
 # ================================
-.streamlit/
+.streamlit/*
+!.streamlit/config.toml
+
+# ================================
+# DB（実行時生成）
+# ================================
+history.db
 *.db
 
 # ================================
